# advent-of-code-template

./: .gitignore  LICENSE  README.md
examples/2015-day-01/c/: Makefile  README.md  flake.nix
examples/2015-day-01/gleam/: Makefile  flake.nix
examples/2015-day-01/go/: Makefile  go.mod
examples/2015-day-01/ocaml/: Makefile  aoc.opam  flake.nix
examples/2015-day-01/python/: Makefile  README.md  flake.nix  main.py
examples/2015-day-01/rust/: flake.nix
examples/2015-day-01/swift/: Makefile
examples/2015-day-01/zig/: Makefile  build.zig  build.zig.zon  flake.nix
template/c/: .gitignore  Makefile  flake.nix
template/c/src/: aoc.c  aoc.h  main.c
template/c/tests/: test_aoc.c
template/elixir/: .gitignore  LICENSE  Makefile  README.md  flake.nix  mix.exs
template/elixir/lib/: aoc.ex
template/elixir/test/: aoc_test.exs
template/gleam/: Makefile  README.md  flake.nix
template/gleam/src/: aoc.gleam
template/gleam/test/: aoc_test.gleam
template/go/: Makefile  README.md  flake.nix
template/go/aoc/: aoc.go  aoc_test.go
template/haskell/: CHANGELOG.md  Makefile  README.md  aoc.cabal  flake.nix
template/haskell/app/: Main.hs
template/haskell/src/: Aoc.hs
template/haskell/test/: Tests.hs
template/ocaml/: Makefile  README.md  dune-project  flake.nix
template/ocaml/lib/: aoc.ml
template/ocaml/test/: test_aoc.ml
template/python/: Makefile  README.md  flake.nix  main.py
template/rust/: Makefile  README.md  flake.nix
template/swift/: Makefile  Package.swift  README.md  flake.nix
template/zig/: Makefile  README.md  flake.nix
(+23 files in other folders)
